--- a/_includes/right.html
+++ b/_includes/right.html
@@ -10,7 +10,17 @@
             Regístrate
           </a>
         </section>
-        
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-12">
+       <section class="box">
+          <a href="/publications" target="_blank">
+            <img src="/images/publications.png" alt="logo">
+          </a>
+          <p>Compartimos conocimientos y experiencias con estas increibles publicaciones! .</p>
+          <a href="/publications" target="_blank" class="btn btn-success btn-lg btn-block">
+            Ver publicaciones
+          </a>
+        </section>
     </div>
      <div class="col-xs-12 col-sm-6 col-md-12">
        <section class="box">
@@ -44,19 +54,6 @@
           </a>
         </section>
     </div>
-
-    <div class="col-xs-12 col-sm-6 col-md-12">
-       <section class="box">
-          <a href="https://gumroad.com/carlosrojas_o}" target="_blank">
-            <img src="http://i.cubeupload.com/Mco21D.png" alt="logo">
-          </a>
-          <p>Aca podras encontrar algunos productos para tus proyectos.</p>
-          <a href="https://gumroad.com/a/672609395 " target="_blank" class="btn btn-success btn-lg btn-block">
-            Ver Productos
-          </a>
-        </section>
-    </div>
-
   </div>
  <div class="row">
    <div class="col-xs-12">
