--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,6 +32,8 @@ layout: default
             <i class="fa fa-github" aria-hidden="true"></i> Ver demo
           </a>
         </p>
+        {% endif %}
+        {% if page.remember %}
         <div class="remember-demo">
           <h4><strong>Recuerda:</strong></h4>
           <p>Si quieres ejecutar este demo un tu computadora, debes tener el <a target="_blank" href="http://ionicframework.com/docs/v2/getting-started/installation/">entorno</a> de ionic instalado y luego de descargar o clonar el proyecto debes ubicarte en tu proyecto en la terminal y luego ejecutar</p>
