--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,6 @@
 <html>
   {% include head.html %}
   <body>
-    
-    {% include nav.html %}
-    {{ content }}
-    {% include footer.html %}
-    {% include js.html %}
+    {% include nav.html %}{{ content }}{% include footer.html %}{% include js.html %}
   </body>
 </html>
