--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -28,7 +28,7 @@ layout: default
       </div>
       <div class="row">
         {% for post in site.posts %}
-          {% if post.author == page.author %}
+          {% if post.author == page.author && post.draft !=true %}
           <div class="col-xs-12 col-sm-6">
             {% include article_home.html trucate="90" %}
           </div>
