--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,9 +7,7 @@ layout: default
       <header class="post-header">
         <h1 class="post-title">{{ page.title }}</h1>
       </header>
-      <article class="post-content">
-        {{ content }}
-      </article>
+      <article class="post-content">{{ content }}</article>
     </div>
     {% include right.html %}
   </div>
