--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -27,12 +27,11 @@ layout: default
         </div>
       </div>
       <div class="row">
-        {% for post in site.posts %}
-          {% if post.author == page.author && post.draft !=true %}
+        {% assign posts = site.posts | where:"draft", "false" | where:"author", page.author %}
+        {% for post in posts %}
           <div class="col-xs-12 col-sm-6">
             {% include article_home.html trucate="90" %}
           </div>
-          {% endif %}
         {% endfor %}
       </div>
     </div>
