--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,7 +30,7 @@
   <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
   <meta name="twitter:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}"
   />
-  <meta name="twitter:image" content="{% if page.cover %}{{ page.cover }}{% else %}{{ site.cover }}{% endif %}g" />
+  <meta name="twitter:image" content="{% if page.cover %}{{ page.cover }}{% else %}{{ site.cover }}{% endif %}" />
 
   <script src="https://use.fontawesome.com/0fb10d4bd2.js"></script>
   <!-- social share-->
