Article about google maps

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,5 +4,5 @@ $title-color: #333;
 $box-background-color: #6E6891;
 $footer-background-color: #422AC4;
 
-$font-title-family: 'PT Sans', Helvetica, Arial, sans-serif;
-$font-text-family: 'Open Sans', Helvetica, Arial, sans-serif;
+$font-title-family: 'Roboto', Helvetica, Arial, sans-serif;
+$font-text-family: 'Roboto', Helvetica, Arial, sans-serif;
