--- a/_includes/right.html
+++ b/_includes/right.html
@@ -1,5 +1,6 @@
 <div class="col-xs-12 col-md-3">
   <div class="row">
+    <!-- Ya paso la fecha 
     <div class="col-xs-12 col-sm-6 col-md-12">
        <section class="box">
           <a href="http://capitaljuniorcollege.edu.co/aplicaciones/" target="_blank">
@@ -11,6 +12,7 @@
           </a>
         </section>
     </div>
+    -->
     <div class="col-xs-12 col-sm-6 col-md-12">
        <section class="box">
           <a href="/publications" target="_blank">
@@ -22,6 +24,7 @@
           </a>
         </section>
     </div>
+    <!-- parece que no va a salir
      <div class="col-xs-12 col-sm-6 col-md-12">
        <section class="box">
           <a href="{{ site.book-url }}" target="_blank">
@@ -34,6 +37,7 @@
           </a>
         </section>
     </div>
+    -->
     <div class="col-xs-12 col-sm-6 col-md-12">
        <section class="box">
          <a href="{{ site.courses-url }}" target="_blank">
