--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -77,6 +77,20 @@ layout: default
         </p>
       </article>
       <hr/>
+      <div class="row">
+      <div class="col-xs-12 col-sm-12">
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- IonBookBlog recommend -->
+      <ins class="adsbygoogle"
+          style="display:block"
+          data-ad-client="ca-pub-8943241156434100"
+          data-ad-slot="1426017276"
+          data-ad-format="auto"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+      </div>
+      </div>
       <section>
         <h3>Artículos relacionados:</h3>
         <div class="row">
