--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -64,8 +64,8 @@ layout: default
       </article>
       <article>
         <hr/>
-        <p>¿Quieres saber más? suscribete a nuestro Newsletter o únete a nuestro canal en <a href="http://goo.gl/forms/ZCEc0cr3jydgK2wv1">Slack</a> y mantente atento.
-        Espero sea de utilidad y sigan Programando :)</p>
+        <p>¿Quieres saber más? Suscríbete a nuestro Newsletter o únete a nuestro canal en <a href="http://goo.gl/forms/ZCEc0cr3jydgK2wv1">Slack</a> y mantente atento.
+        Espero sea de utilidad y sigan programando :)</p>
         <p>Por: <a href="{{ author.url }}"><strong>{{ author.name }}</strong></a></p>
         <h4 class="title">Siguenos en:</h4>
         <p>
