--- a/_includes/right.html
+++ b/_includes/right.html
@@ -1,18 +1,5 @@
 <div class="col-xs-12 col-md-3">
   <div class="row">
-    <!-- Ya paso la fecha 
-    <div class="col-xs-12 col-sm-6 col-md-12">
-       <section class="box">
-          <a href="http://capitaljuniorcollege.edu.co/aplicaciones/" target="_blank">
-           <img src="/images/ion-book-wh.png" alt="logo">
-          </a>
-          <p>¿Estas en Bogotá? tendremos un curso <strong>profesional</strong> sobre Ionic 2 presencial.</p>
-          <a href="http://capitaljuniorcollege.edu.co/aplicaciones/" target="_blank" class="btn btn-success btn-lg btn-block">
-            Regístrate
-          </a>
-        </section>
-    </div>
-    -->
     <div class="col-xs-12 col-sm-6 col-md-12">
        <section class="box">
           <a href="/publications" target="_blank">
@@ -24,20 +11,7 @@
           </a>
         </section>
     </div>
-    <!-- parece que no va a salir
-     <div class="col-xs-12 col-sm-6 col-md-12">
-       <section class="box">
-          <a href="{{ site.book-url }}" target="_blank">
-            <img src="{{ site.book-img }}" alt="logo" class="hidden-sm">
-            <img src="/images/ion-book-wh.png" alt="logo" class="visible-sm">
-          </a>
-          <p>Aprende ionic1 & ionic2 y construye increibles aplicaciones mientras aprendes. </p>
-          <a href="{{ site.book-url }}" target="_blank" class="btn btn-success btn-lg btn-block disabled">
-            Muy pronto
-          </a>
-        </section>
-    </div>
-    -->
+
     <div class="col-xs-12 col-sm-6 col-md-12">
        <section class="box">
          <a href="{{ site.courses-url }}" target="_blank">
@@ -59,6 +33,19 @@
         </section>
     </div>
   </div>
+
+      <div class="col-xs-12 col-sm-6 col-md-12">
+       <section class="box">
+          <a href="https://gumroad.com/carlosrojas_o}" target="_blank">
+            <img src="http://i.cubeupload.com/Mco21D.png" alt="logo">
+          </a>
+          <p>Aca podras encontrar algunos productos para tus proyectos.</p>
+          <a href="https://gumroad.com/carlosrojas_o" target="_blank" class="btn btn-success btn-lg btn-block">
+            Ver Productos
+          </a>
+        </section>
+    </div>
+    
  <div class="row">
    <div class="col-xs-12">
      <h4 class="title">Siguenos en:</h4>
