--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -21,7 +21,8 @@ a{
 .center-block{
   display: block;
   margin-left: auto;
-  margin-right: auto; 
+  margin-right: auto;
+  clear: both;
 }
 button.menu{
   display: inline-block;
