--- a/_includes/blog/right.html
+++ b/_includes/blog/right.html
@@ -1,86 +1,27 @@
-<div class="col-xs-12 col-md-3">
+<div class="row wrap baseline">
+  <div class="col col-100">
+    <section>
+      <h3>Artículos relacionados:</h3>
+      <div class="row wrap baseline">
+        {% assign count = 0 %}
+        {% for tag in page.tags %}
+          {% for post in site.posts %}
+            {% if post.tags contains tag and count < site.blog.count_related_posts and post.title != page.title %}
+            {% assign count = count | plus: 1 %}
+            <div class="col col-100 col-md-33 col-lg-100">
+              {% include blog/article_right.html %}
+            </div>
+            {% endif %}
+          {% endfor %}
+        {% endfor %}
+      </div>
+      </section>
+  </div>
+</div>
+<div class="content-slack-right">
   <div class="row">
-    <!-- Ya paso la fecha 
-    <div class="col-xs-12 col-sm-6 col-md-12">
-       <section class="box">
-          <a href="http://capitaljuniorcollege.edu.co/aplicaciones/" target="_blank">
-           <img src="/images/ion-book-wh.png" alt="logo">
-          </a>
-          <p>¿Estas en Bogotá? tendremos un curso <strong>profesional</strong> sobre Ionic 2 presencial.</p>
-          <a href="http://capitaljuniorcollege.edu.co/aplicaciones/" target="_blank" class="btn btn-success btn-lg btn-block">
-            Regístrate
-          </a>
-        </section>
-    </div>
-    -->
-    <div class="col-xs-12 col-sm-6 col-md-12">
-       <section class="box">
-          <a href="/publications" target="_blank">
-            <img src="/images/publications.png" alt="logo">
-          </a>
-          <p>Compartimos conocimientos y experiencias con estas increibles publicaciones! .</p>
-          <a href="/publications" target="_blank" class="btn btn-success btn-lg btn-block">
-            Ver publicaciones
-          </a>
-        </section>
-    </div>
-    <!-- parece que no va a salir
-     <div class="col-xs-12 col-sm-6 col-md-12">
-       <section class="box">
-          <a href="{{ site.book-url }}" target="_blank">
-            <img src="{{ site.book-img }}" alt="logo" class="hidden-sm">
-            <img src="/images/ion-book-wh.png" alt="logo" class="visible-sm">
-          </a>
-          <p>Aprende ionic1 & ionic2 y construye increibles aplicaciones mientras aprendes. </p>
-          <a href="{{ site.book-url }}" target="_blank" class="btn btn-success btn-lg btn-block disabled">
-            Muy pronto
-          </a>
-        </section>
-    </div>
-    -->
-    <div class="col-xs-12 col-sm-6 col-md-12">
-       <section class="box">
-         <a href="{{ site.courses-url }}" target="_blank">
-            <img src="/images/ion-book-wh.png" alt="logo">
-          </a>
-          <p>Aprende con cursos más específicos con videos online. </p>
-          <a href="{{ site.courses-url }}" target="_blank" class="btn btn-success btn-lg btn-block">
-            Ver cursos
-          </a>
-        </section>
-    </div>
-
-    <div class="col-xs-12 col-sm-6 col-md-12">
-       <section class="box">
-          <p>Sigue nuestro canal de Youtube. </p>
-          <a href="http://j.mp/2bvg8ow" target="_blank" class="btn btn-success btn-lg btn-block">
-             <i class="fa fa-youtube-play" aria-hidden="true"></i> Startupers
-          </a>
-        </section>
+    <div class="col col-100 offset-md-25 col-md-50 offset-lg-25 col-lg-50">
+      {% include general/banner-slack.html %}
     </div>
   </div>
- <div class="row">
-   <div class="col-xs-12">
-     <h4 class="title">Siguenos en:</h4>
-      <p>
-      {% for social in site.social_links %}
-        <a href="{{ social.url }}" target="_blank" class="btn btn-default">
-          <i class="fa {{ social.icon }}" aria-hidden="true"></i>
-        </a>
-      {% endfor %}
-      </p>
-   </div>
-  <div class="col-xs-12">
-      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <!-- IonBookBlog -->
-      <ins class="adsbygoogle"
-          style="display:block"
-          data-ad-client="ca-pub-8943241156434100"
-          data-ad-slot="7344056075"
-          data-ad-format="auto"></ins>
-      <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-    </div>
- </div>
 </div>
