--- a/_sass/base/_buttons.scss
+++ b/_sass/base/_buttons.scss
@@ -19,6 +19,15 @@
   &.btn-round{
     border-radius: $border-radius-btn;
   }
+  &.btn-icon{
+    padding: 8px 16px;
+    margin-top: 16px;
+    margin-bottom: 16px;
+    .icon{
+      margin-right: 5px;
+      font-size: 1.5em;
+    }
+  }
 }
 @media screen and (min-width: $min-width-medium) and (max-width: $max-width-medium) {
   .btn{
@@ -28,5 +37,9 @@
 @media screen and (min-width: $min-width-large) {
   .btn{
     font-size: 1em;
+     &.btn-icon{
+      margin-top: 0px;
+      margin-bottom: 0px;
+    }
   }
 }
