:bug:  fix errors with images and links

--- a/_includes/blog/right.html
+++ b/_includes/blog/right.html
@@ -1,6 +1,6 @@
 <div class="row wrap baseline">
   <div class="col col-100">
-    <section>
+    <section class="content-article-right">
       <h3>Artículos relacionados:</h3>
       <div class="row wrap baseline">
         {% assign count = 0 %}
