--- a/_sass/base/_fonts.scss
+++ b/_sass/base/_fonts.scss
@@ -79,3 +79,9 @@
 .icon-slack:before {
   content: "\72";
 }
+.icon-android-done:before {
+  content: "\73";
+}
+.icon-android-close:before {
+  content: "\74";
+}
