--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 {% include blog/header.html %}
 {% assign author = site.authors[page.author] %}
-<div class="content">
+<div class="content content-title">
   <div class="row wrap center">
     <div class="col col-100 col-md-100 col-lg-80">
       <h1 class="title-article">{{ page.title }}</h1>
@@ -30,12 +30,11 @@ layout: default
   </div>
 </div>
 <div class="content">
-  <div class="row wrap baseline">
-    <div class="col col-100 col-md-100 col-lg-80">
-      <article class="article-detail">
+  <div class="row wrap top">
+    <div class="col col-100 col-md-100 col-lg-80 article-detail">
+      <article>
         <div class="text">{{ content }}</div>
         {% if page.repo %}
-        
         <a href="{{ page.repo }}" class="btn btn-primary btn-round center-block btn-icon btn-demo" target="_blank">
           <div class="icon icon-social-octocat"></div> Ver demo
         </a>
