--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -117,10 +117,10 @@ blockquote {
   font-size: 1.2em;
   border-left: 5px solid #eee;
 }
-
 @import
 "normalize",
 "buttons",
 "fonts",
 "grids",
+"tables",
 "visibility";
