--- a/_sass/blog/_articles.scss
+++ b/_sass/blog/_articles.scss
@@ -27,20 +27,26 @@
     font-size: 1em;
   }
 }
-.article-right{
-  margin: 0px;
-  box-sizing: border-box;
-  h2{
+.content-article-right{
+  h3{
     margin-top: 0px;
-    font-size: 1.3em;
-    a{
-      font-family: $font-title-family;
-      color: $secondary-color;
-      font-weight: bold;
-      text-decoration: none;
+  }
+  .article-right{
+    margin: 0px;
+    box-sizing: border-box;
+    h2{
+      margin-top: 0px;
+      font-size: 1.3em;
+      a{
+        font-family: $font-title-family;
+        color: $secondary-color;
+        font-weight: bold;
+        text-decoration: none;
+      }
     }
   }
 }
+
 .article-cover{
   margin: 20px 0px;
   box-sizing: border-box;
@@ -73,8 +79,24 @@
   display: inline-block;
   font-size: .8em;
 }
-.title-article{
+.content-title{
   margin-bottom: 5px;
+  .title-article{
+    margin-bottom: 5px;
+  }
+}
+
+.article-detail{
+  box-sizing: border-box;
+  p{
+    color: black;
+  }
+  article .text{
+    p{
+      font-size: 1.1em;
+      line-height: 1.3;
+    }
+  }
 }
 @media screen and (min-width: $min-width-medium) and (max-width: $max-width-medium) {
   .article{
