--- a/_sass/base/_fonts.scss
+++ b/_sass/base/_fonts.scss
@@ -85,3 +85,9 @@
 .icon-android-close:before {
   content: "\74";
 }
+.icon-linkedin:before {
+  content: "\75";
+}
+.icon-earth:before {
+  content: "\76";
+}
