--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -2,9 +2,14 @@
 layout: default
 ---
 {% include blog/header.html %}
+{% assign posts = site.categories[page.category] | where:"draft", "false" %}
 <div class="content">
+  <div class="row">
+    <div class="col">
+      <h1 class="title-page">{{page.title}} ({{ posts | size }}):</h1>
+    </div>
+  </div>
   <div class="row wrap baseline">
-    {% assign posts = site.categories[page.category] | where:"draft", "false" %}
     {% for post in posts %}
     <div class="col col-100 col-md-33 col-lg-33">
       {% include general/article.html %}
