--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -117,6 +117,11 @@ blockquote {
   font-size: 1.2em;
   border-left: 5px solid #eee;
 }
+.title-page{
+  color: $secondary-color;
+  border-bottom: 1px solid $secondary-color;
+  text-transform: capitalize;
+}
 @import
 "normalize",
 "buttons",
