--- a/_includes/general/banner-slack.html
+++ b/_includes/general/banner-slack.html
@@ -12,3 +12,19 @@
     </div>
   </div>
 </div>
+<div class="banner-slack" style="border:none">
+  <div class="row wrap center">
+    <div>
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- IonBookBlog recommend -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8943241156434100"
+     data-ad-slot="1426017276"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+    </div>
+  </div>
+</div>
