--- a/_includes/general/banner-slack.html
+++ b/_includes/general/banner-slack.html
@@ -14,7 +14,7 @@
 </div>
 <div class="banner-slack" style="border:none">
   <div class="row wrap center">
-    <div>
+    <div class="col col-100">
       <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- IonBookBlog recommend -->
 <ins class="adsbygoogle"
