--- a/_includes/blog/header.html
+++ b/_includes/blog/header.html
@@ -4,10 +4,10 @@
 <div class="menu-blog">
   <div class="content">
     <div class="row wrap center">
-      <div class="col col-100 col-md-40 col-lg-40">
+      <!--<div class="col col-100 col-md-40 col-lg-40">
         {% include general/subscribe.html %}
-      </div>
-      <div class="col col-100 col-md-60 col-lg-60 hidden-sm">
+      </div>-->
+      <div class="col col-100 col-md-60 offset-md-40 col-lg-60 offset-lg-40 hidden-sm">
         <ul>
           <li>
             <a {% if page.layout == "default" %}class="active"{% endif %} href="{{ "/blog"  }}">Todo</a>
