--- a/_includes/general/banner-slack.html
+++ b/_includes/general/banner-slack.html
@@ -12,11 +12,12 @@
     </div>
   </div>
 </div>
+<!--
 <div class="banner-slack" style="border:none">
   <div class="row wrap center">
     <div class="col col-100">
       <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- IonBookBlog recommend -->
+ IonBookBlog recommend 
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-8943241156434100"
@@ -27,4 +28,4 @@
 </script>
     </div>
   </div>
-</div>
+</div>-->
