inlcude Ads with amp

--- a/_includes/general/head.html
+++ b/_includes/general/head.html
@@ -45,5 +45,6 @@
   <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
   <script async custom-element="amp-image-lightbox" src="https://cdn.ampproject.org/v0/amp-image-lightbox-0.1.js"></script>
   <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
+  <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
   <script async src="//load.sumome.com/" data-sumo-site-id="573a8f4fa849b2d4c4da69cbb73a95092806107954ecdd7fddd49261a23fd6bb"></script>
 </head>
