--- a/_includes/blog/right.html
+++ b/_includes/blog/right.html
@@ -24,4 +24,9 @@
       {% include general/banner-slack.html %}
     </div>
   </div>
+  <div class="row">
+    <div class="col col-100 offset-md-25 col-md-50 offset-lg-25 col-lg-50">
+      {% include general/ads.html %}
+    </div>
+  </div>
 </div>
