fix errors with ads

--- a/_includes/general/ads.html
+++ b/_includes/general/ads.html
@@ -1,7 +1,7 @@
-<div>
+<div class="banner-ads">
   <div class="row wrap center">
     <div class="col col-100">
-      <amp-ad layout="fixed"
+      <amp-ad layout="flex-item" height="400"
           type="adsense"
           data-ad-client="ca-pub-8943241156434100"
           data-ad-slot="1426017276"
