--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -122,6 +122,9 @@ blockquote {
   border-bottom: 1px solid $secondary-color;
   text-transform: capitalize;
 }
+.banner-ads{
+  margin-top: 10px;
+}
 @import
 "normalize",
 "buttons",
