--- a/_includes/general/head.html
+++ b/_includes/general/head.html
@@ -64,4 +64,16 @@
   <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
   <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
   <script async src="//load.sumome.com/" data-sumo-site-id="573a8f4fa849b2d4c4da69cbb73a95092806107954ecdd7fddd49261a23fd6bb"></script>
+  <script async type="text/javascript">
+    (function(p,u,s,h){
+        p._pcq=p._pcq||[];
+        p._pcq.push(['_currentTime',Date.now()]);
+        s=u.createElement('script');
+        s.type='text/javascript';
+        s.async=true;
+        s.src='https://cdn.pushcrew.com/js/cd961b7fc40d92661a578254340c720d.js';
+        h=u.getElementsByTagName('script')[0];
+        h.parentNode.insertBefore(s,h);
+    })(window,document);
+  </script>
 </head>
