--- a/_includes/general/banner-course.html
+++ b/_includes/general/banner-course.html
@@ -5,7 +5,7 @@
         <p>{{ site.banner_course.text }}</p>
       </div>
       <div class="col col-100 col-md-40 col-lg-40">
-        <a href="{{ banner_course.link }}" target="_blank" class="btn btn-primary btn-round btn-course">{{ site.banner_course.btn_text }}</a>
+        <a href="{{ site.banner_course.url }}" target="_blank" class="btn btn-primary btn-round btn-course">{{ site.banner_course.btn_text }}</a>
       </div>
     </div>
   </div>
