--- a/_includes/general/banner-slack.html
+++ b/_includes/general/banner-slack.html
@@ -6,7 +6,7 @@
     <div class="col col-67 col-md-75 col-lg-80">
       <h3>{{ site.banner_slack.title }}</h3>
       <p>{{ site.banner_slack.text }}</p>
-      <a href="" class="btn btn-primary btn-round btn-join" target="_blank" href="{{ site.banner_slack.link }}">
+      <a href="" class="btn btn-primary btn-round btn-join" target="_blank" href="{{ site.banner_slack.url }}">
         {{ site.banner_slack.btn_text   }}
       </a>
     </div>
