--- a/_includes/general/footer.html
+++ b/_includes/general/footer.html
@@ -3,7 +3,7 @@
     <div class="row wrap center">
       <div class="col col-100 col-md-66 col-lg-66">
         <a href="{{ "/"  | prepend: site.baseurl }}">
-          <amp-img src="{{ 'images/ion-book-wh.png'  | prepend: site.baseurl }}"  width="553" height="193" layout="responsive"></amp-img>
+          <amp-img src="{{ '/images/ion-book-wh.png'  | prepend: site.baseurl }}"  width="553" height="193" layout="responsive"></amp-img>
         </a>
         <p>{{ site.footer.text }}</p>
         </ul>
