--- a/_includes/general/nav.html
+++ b/_includes/general/nav.html
@@ -1,8 +1,8 @@
 <div class="nav-bar">
   <nav class="content">
     <div class="left-nav">
-      <a href="{{ site.baseurl }}" class="title">
-        <amp-img src="{{ 'images/ion-book-wh.png'  | prepend: site.baseurl }}" width="553" height="193" layout="responsive"></amp-img>
+      <a href="{{ "/"  | prepend: site.baseurl }}" class="title">
+        <amp-img src="{{ '/images/ion-book-wh.png'  | prepend: site.baseurl }}" width="553" height="193" layout="responsive"></amp-img>
       </a>
     </div>
     <div class="right-nav">
