Removiendo links redundantes, Removiendo ADS, Agregando un boton para notificaciones en lugar de Popup.

--- a/_includes/blog/right.html
+++ b/_includes/blog/right.html
@@ -24,9 +24,13 @@
       {% include general/banner-slack.html %}
     </div>
   </div>
-  <div class="row">
-    <div class="col col-100 offset-md-25 col-md-50 offset-lg-25 col-lg-50">
-      {% include general/ads.html %}
+</div>
+
+<div class="row wrap baseline">
+  <div class="col col-100">      
+    <h3>Nunca te pierdas una Noticia.</h3>
+      <button onclick="_pcq.push(['triggerOptIn',{httpWindowOnly: true}]);">
+      Obtén Notificaciones.
+      </button>
     </div>
-  </div>
 </div>
