--- a/_includes/blog/right.html
+++ b/_includes/blog/right.html
@@ -29,8 +29,8 @@
 <div class="row wrap baseline">
   <div class="col col-100">      
     <h3>Nunca te pierdas una Noticia.</h3>
-      <a onclick="_pcq.push(['triggerOptIn',{httpWindowOnly: true}]);">
+      <button onclick="_pcq.push(['triggerOptIn',{httpWindowOnly: true}]);">
       Obtén Notificaciones.
-      </a>
+      </button>
     </div>
 </div>
