--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,5 +1,5 @@
 ---
-layout: blog
+layout: default
 ---
 {% include blog/header.html %}
 {% assign posts = site.categories[page.category] | where:"draft", "false" %}
