--- a/_sass/base/_fonts.scss
+++ b/_sass/base/_fonts.scss
@@ -14,11 +14,11 @@
 
 [class^="icon-"]:before,
 [class*=" icon-"]:before {
-  font-family: "ionbook" !important;
-  font-style: normal !important;
-  font-weight: normal !important;
-  font-variant: normal !important;
-  text-transform: none !important;
+  font-family: "ionbook";
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
   speak: none;
   line-height: 1;
   -webkit-font-smoothing: antialiased;
